# Realsense_Processing

./: .gitignore  frame_cut.py  pc_metrics.ipynb
camera_settings/: high_performance_settings.json  manual_exp_settings.json  no_auto_exp.json  threshold_settings.json
frame_extraction/: CMakeLists.txt  Makefile  fix_text.py  int_params_reg_cal.txt  live_frame_extraction.cpp  record_video.cpp  trigger_ttl.cpp  video_to_frame.cpp
metrics/: pc_metrics.ipynb
